<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_above="@+id/bottomBar"
        android:layout_below="@+id/topButtonsBar"
        app:srcCompat="@drawable/halflife_alyx_1" />

    <RelativeLayout
        android:id="@+id/topButtonsBar"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_alignBottom="@id/closeArrow"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:text="@string/screenTitle" />

        <ImageButton
            android:id="@+id/closeArrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:background="#00000000"
            android:onClick="closePressed"
            app:srcCompat="@drawable/arrow_back_white" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:textColor="#ff555555"
            android:text="" />
    </RelativeLayout>



    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/authorText"
        android:orientation="vertical"
        android:visibility="visible">
        <SeekBar
            android:id="@+id/brightnessBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottomBar"
            android:max="255"
            android:progress="90" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/lowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_low"
            android:background="#ff6200ee"
            android:layout_marginLeft="5dp"
            android:onClick="lowPressed"/>

        <Button
            android:id="@+id/defaultButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_medium"
            android:background="#ff6200ee"
            android:layout_marginLeft="5dp"
            android:onClick="defaultPressed"/>

        <Button
            android:id="@+id/hightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_high"
            android:background="#ff6200ee"
            android:layout_marginLeft="5dp"
            android:onClick="highPressed"/>

        <Button
            android:id="@+id/openSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/open_settings"
            android:onClick="openSettingsClicked"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="5dp"
            android:visibility="gone"
            app:srcCompat="@drawable/arrow_back_white" />
    </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/permissionRequestLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#aa000000"
        android:layout_below="@+id/topButtonsBar"
        android:visibility="gone">
        <TextView
            android:id="@+id/alert_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/permissionAlert"
            android:textColor="@color/white"
            android:background="@color/black"
            android:gravity="center"
            android:layout_margin="50dp" />
        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alert_text"
            android:layout_centerHorizontal="true"
            android:onClick="openPermissionWindowClicked"
            android:text="@string/permissionButton" />
    </RelativeLayout>
    <TextView
        android:id="@+id/authorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:textColor="#ff555555"
        android:text="@string/author"/>
</RelativeLayout>